--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ button {
     transform: translateY(5px);
     opacity: 0;
     font-size: 2.2rem;
-    padding: 20px 20px 40px 20px; /* Increased bottom padding from 30px to 40px */
+    /* padding: 20px 20px 40px 20px;  */
     text-align: center;
     pointer-events: none;
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
@@ -168,13 +168,13 @@ button {
 
 /* For longer quotes, reduce the font size */
 #message-area.long-quote {
-    font-size: 1.7rem;
+    font-size: 1.9rem;
     line-height: 1;
 }
 
 /* For even longer quotes, reduce more */
 #message-area.very-long-quote {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     line-height: 0.9;
 }
 
