--- a/style.css
+++ b/style.css
@@ -101,12 +101,12 @@ button {
     font-family: 'Cedarville Cursive', cursive;
     color: var(--svg-oak-color); /* Default to oak, will be overridden */
     position: absolute;
-    bottom: 25px; /* Increased from 15px to move up */
+    bottom: 2px;
     left: 0;
     right: 0;
     transform: translateY(5px);
     opacity: 0;
-    font-size: 2.2rem;
+    font-size: 2.4rem;
     /* padding: 20px 20px 40px 20px;  */
     text-align: center;
     pointer-events: none;
@@ -121,7 +121,7 @@ button {
     -webkit-text-fill-color: var(--svg-oak-color);
     max-width: 90%;
     margin: 0 auto;
-    max-height: 120px; /* Increased from 100px to 120px */
+    max-height: 150px; /* Increased from 100px to 120px */
     overflow: hidden; /* Hide overflow text */
 }
 
@@ -168,13 +168,13 @@ button {
 
 /* For longer quotes, reduce the font size */
 #message-area.long-quote {
-    font-size: 1.9rem;
+    font-size: 2.1rem;
     line-height: 1;
 }
 
 /* For even longer quotes, reduce more */
 #message-area.very-long-quote {
-    font-size: 1.6rem;
+    font-size: 1.9rem;
     line-height: 0.9;
 }
 
