--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ button {
     border: 4px solid var(--wood-dark);
     margin-left: 180px;
     margin-right: 200px;
+    margin-top: 10px;
 }
 
 #panel::before {
@@ -101,7 +102,7 @@ button {
     font-family: 'Cedarville Cursive', cursive;
     color: var(--svg-oak-color); /* Default to oak, will be overridden */
     position: absolute;
-    bottom: 2px;
+    bottom: 0;
     left: 0;
     right: 0;
     transform: translateY(5px);
@@ -120,7 +121,7 @@ button {
     -webkit-text-fill-color: var(--svg-oak-color);
     max-width: 90%;
     margin: 0 auto;
-    max-height: 160px; 
+    max-height: 170px; 
     overflow: hidden; 
 }
 
